--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "emerald-ui": "^2.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.20.5",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
