server: add python-jose this has always been needed for the server to run but wasn't included previously

--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,21 +1,28 @@
 anyio==3.4.0
 asgiref==3.4.1
+cffi==1.15.0
 click==8.0.3
+cryptography==36.0.2
+ecdsa==0.17.0
 fastapi==0.70.0
 h11==0.12.0
 httptools==0.2.0
 idna==3.3
 mysql-connector-python==8.0.27
 protobuf==3.19.1
+pyasn1==0.4.8
 pycodestyle==2.8.0
+pycparser==2.21
 pydantic==1.8.2
 python-dotenv==0.19.2
+python-jose==3.3.0
 python-multipart==0.0.5
 PyYAML==6.0
+rsa==4.8
 six==1.16.0
 sniffio==1.2.0
 starlette==0.16.0
-typing-extensions==4.0.0
+typing_extensions==4.0.0
 uvicorn==0.15.0
 uvloop==0.16.0
 watchgod==0.7
